# linear-mpc

./: CMakeLists.txt  package.xml
cfg/: Commands.cfg
config/: config_S550.yaml
include/atp/: Autopilot.hpp  AutopilotStateMachine.hpp  Datatypes.hpp  FullPoseStateMachine.hpp  Helper.hpp
include/boost/: sml.hpp
include/model/: FirstOrderModel.hpp  StateSpaceModel-Impl.hpp  StateSpaceModel.hpp  ThrustModel.hpp
include/mpc/: Constants.hpp  Datatypes.hpp  Helper.hpp  MPC.hpp
include/qp/: QPMatrices.hpp  QPSolver.hpp  QPSolver_impl.hpp
launch/: autopilot_S550.launch  autopilot_S550_experiment.launch
src/: Autopilot.cpp  MPC.cpp  node.cpp
